--- a/WebDiabloMvc/WebDiabloMvc.csproj
+++ b/WebDiabloMvc/WebDiabloMvc.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.78" />
+    <PackageReference Include="Dapper-QueryBuilder" Version="1.0.5" />
     <PackageReference Include="jQuery" Version="3.5.1" />
     <PackageReference Include="jQuery.Validation" Version="1.19.2" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.2" />
